load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "strings",
    srcs = [
        "part-1.cc",
        "part-2.cc",
        "part-3.cc",
        "part-4.cc",
        "part-5.cc",
        "part-6.cc",
        "part-7.cc",
        "part-8.cc",
        "part-9.cc",
        "part-10.cc",
        "part-11.cc",
        "part-12.cc",
        "part-13.cc",
        "part-14.cc",
        "part-15.cc",
        "part-16.cc",
        "part-17.cc",
        "part-18.cc",
        "part-19.cc",
        "part-20.cc",
    ],
    hdrs = [
        "part-1.h",
        "part-2.h",
        "part-3.h",
        "part-4.h",
        "part-5.h",
        "part-6.h",
        "part-7.h",
        "part-8.h",
        "part-9.h",
        "part-10.h",
        "part-11.h",
        "part-12.h",
        "part-13.h",
        "part-14.h",
        "part-15.h",
        "part-16.h",
        "part-17.h",
        "part-18.h",
        "part-19.h",
        "part-20.h",
    ],
    visibility = ["//visibility:public"],
)
